--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ Roadmap.ipynb
 patreon_data_20250704.csv
 patreon_data_20250609.csv
 patreon_data_20250603.csv
+patreon_data_w1.csv
+patreon_data_w2.csv
+patreon_data_w3.csv
+.vscode/settings.json
+Patreon_Scraped_Data/patreon_data_20250710_000719_combined.csv
+Patreon_Scraped_Data/patreon_data_20250709_193851_combined.csv
+Patreon_Scraped_Data/patreon_data_20250804_041745_combined.csv
+Ver16_for_second_test.py
+Ver16_for_second_test.py
