--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Roadmap.ipynb
 patreon_data_20250704.csv
 patreon_data_20250609.csv
 patreon_data_20250603.csv
@@ -11,3 +10,4 @@ Patreon_Scraped_Data/patreon_data_20250709_193851_combined.csv
 Patreon_Scraped_Data/patreon_data_20250804_041745_combined.csv
 Ver16_for_second_test.py
 Ver16_for_second_test.py
+patreon_data_w4.csv
